--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -30,8 +30,8 @@
   margin-top: 26px;
   margin-left: 20px;
   outline: 1px solid white;
-  height: 80px;
-  width: 160px;
+  height: 60px;
+  width: 140px;
 }
 
 .sign-in:hover {
